--- a/cartclient/.gitignore
+++ b/cartclient/.gitignore
@@ -77,12 +77,8 @@ dist
 # Serverless directories
 .serverless
 
-# IDE / Editor
+# IDE
 .idea
-.editorconfig
 
 # Service worker
 sw.*
-
-# Mac OSX
-.DS_Store
