--- a/cartclient/package.json
+++ b/cartclient/package.json
@@ -1,8 +1,8 @@
 {
   "name": "cartclient",
   "version": "1.0.0",
-  "description": "E-Commerce",
-  "author": "Anand MAurya",
+  "description": "My gnarly Nuxt.js project",
+  "author": "iotronlabs",
   "private": true,
   "scripts": {
     "dev": "nuxt",
@@ -11,12 +11,14 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "bulma": "^0.7.5",
-    "nuxt": "^2.0.0"
+    "cross-env": "^5.2.0",
+    "nuxt": "^2.4.0",
+    "vuetify": "^1.5.5",
+    "vuetify-loader": "^1.2.1"
   },
   "devDependencies": {
-    "node-sass": "^4.12.0",
     "nodemon": "^1.18.9",
-    "sass-loader": "^7.1.0"
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2"
   }
 }
