--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,12 @@
         "php": "^7.1.3",
         "barryvdh/laravel-cors": "^0.11.3",
         "fideloper/proxy": "^4.0",
+        "kylekatarnls/laravel-carbon-2": "^1.0.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
-        "moneyphp/money": "^3.2"
+        "moneyphp/money": "^3.2",
+        "nesbot/carbon": "2.16.3 as 1.34.0",
+        "tymon/jwt-auth": "1.0.0-rc.4.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
